--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "class-validator": "^0.13.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -34,6 +35,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
